--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,6 @@
-Flask
-Flask-Bootstrap
-Flask-Migrate
-Flask-Moment
-Flask-SQLAlchemy
-Flask-WTF
+Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
+Flask-Migrate==2.5.3
+Flask-Moment==0.11.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
